WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256899
[GStreamer] Audio sinks created by media players leak
https://bugs.webkit.org/show_bug.cgi?id=256899
Summary
[GStreamer] Audio sinks created by media players leak
Philippe Normand
Reported
2023-05-17 09:28:18 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-05-17 09:30:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13965
EWS
Comment 2
2023-05-18 00:52:05 PDT
Committed
264193@main
(62269b67734d): <
https://commits.webkit.org/264193@main
> Reviewed commits have been landed. Closing PR #13965 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-05-18 00:53:22 PDT
<
rdar://problem/109501338
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug