Cherry-pick 264193@main (62269b67734d). https://bugs.webkit.org/show_bug.cgi?id=256899

[GStreamer] Audio sinks created by media players leak
    https://bugs.webkit.org/show_bug.cgi?id=256899

    Reviewed by Xabier Rodriguez-Calvar.

    Replace the leaky g_object_get() with a simple accessor to the m_audioSink member variable.

    * Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
    (WebCore::MediaPlayerPrivateGStreamer::audioSink const): Deleted.
    * Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:
    (WebCore::MediaPlayerPrivateGStreamer::audioSink const):

    Canonical link: https://commits.webkit.org/264193@main

Canonical link: https://commits.webkit.org/260527.361@webkitglib/2.40